Fixed font sizes of card headers and badges on mobile devices.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -325,9 +325,16 @@ h2 {
 }
 
 .card-header {
-  font-size: 2.8rem;
+  font-size: 2.2rem;
   font-weight: 500;
 }
+
+@media (min-width: 768px) {
+  .card-header {
+    font-size: 2.8rem;
+  }
+}
+
 
 .card-header--primary {
   background: -webkit-linear-gradient(to right, #03256C, #6A097D);
@@ -405,7 +412,7 @@ h2 {
 }
 
 .timeline__date {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   font-weight: 500;
   text-align: center;
   color: var(--color-primary);
@@ -543,7 +550,7 @@ h2 {
 .badge {
   border-radius: .5rem;
   padding: 1rem;
-  font-size: 2rem;
+  font-size: 1.8rem;
   font-weight: 500;
 }
 
